--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -13,7 +13,7 @@
     </head>
     <body >
         {% block body %}
-          {{include('menutop.html.twig')}} 
+        {{include('menuini.html.twig')}}
         {% endblock %}
        
         {% block javascripts %}
