--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -8,6 +8,7 @@
               <a href="#" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="true">Servicos <span class="caret"></span></a>
               <ul class="dropdown-menu">
             
+              <li><a href="{{ path('umespa_user_add') }}">Solicitar Passe Livre</a></li>
               <li><a href="#">Renovacao da Carteirinhas</a></li-->
 
            
@@ -19,18 +20,18 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
  <li class="dropdown">
-              <a href="#" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">Servicos </a>
+              <a href="{{ path('umespa_user_add') }}" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">Servicos </a>
               <ul class="dropdown-menu">
                 <li>
 </li>
-                   <li><a href="#">Solicitar passe livre</a></li>
-                   <li><a href="#">Atualizar Cadastro</a></li>
-                   <li><a href="#">Renovar Carteira</a></li>
+                   <li><a href="{{ path('emm_user_login') }}">Solicitar passe livre</a></li>
+                   <li><a href="{{ path('add_aluno') }}">Atualizar Cadastro</a></li>
+                   <li><a href="{{ path('emm_user_login') }}">Renovar Carteira</a></li>
 
 
 
            </ul>
-        <li><a href="#">Logout</a></li>
+        <li><a href="{{ path('emm_user_login') }}">Logout</a></li>
             
                 <!--li class="dropdown">
               <a href="{{ path('umespa_user_add') }}" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">Login </a>
