--- a/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
@@ -2,60 +2,63 @@
 
 {% block body %}
 {{parent()}}
-<div  class="container" style="margin-top: 101px;">
-				
-				<div class="box-form panel-body">
+	<div  class="container" style="margin-top: 101px;">
+		<div class="panel panel-default">
+			{% if (page !='login') %}
+			<div class="panel-heading"><h2>Ainda não possui cadastro?</h2></div>
+			{% else %}
+			<div class="panel-heading"><h2>Login</h2></div>
+			{% endif %}
+			<div class="box-form panel-body">
+				<div class="row">
+					{{ form_start(form, { 'attr' : { 'novalidate': 'novalidate'}})}}
 					
-						
-						<div class="row" id="email-account-container">
-							<!--form id="form-registra" name="form-registra" class="loginItems" action="#" method="post" novalidate="novalidate"-->
-					  {{ form_start(form, { 'attr' : { 'novalidate': 'novalidate'}})}}
-                         {% if (page !='login') %}
-                            <div class="form-group col-xs-9">
-								  <label class="control-label col-sm-3 hidden-xs" >NOME:</label>
-								  <div class="col-sm-9 col-xs-9">
-									<!--input id="nome" name="nome" minlength="6" placeholder="Nome Completo" class="form-control" required="true" type="text" value="" maxlength="80" aria-required="true"-->
-									   {{ form_widget(form.nome, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Nome Completo'} }) }}
-									    <span class="text-danger">{{ form_errors(form.nome) }}</span>
-									
-								  </div>
+					  	<div class="form-group col-xs-9">
+							<div class="col-sm-9 col-xs-9">
+								{% if (page !='login') %}
+						        	{{ form_widget(form.nome, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Nome Completo'} }) }}
+							        <span class="text-danger">{{ form_errors(form.nome) }}</span>
+							   {% endif %} 
 							</div>
-                          {% endif %}  
-							<div class="form-group  col-xs-9">
-								<label class="control-label col-sm-3 hidden-xs" >E-MAIL:</label>
-								<div class="col-sm-9  col-xs-9">
-								<!--input id="email" name="email" mailcustom="true" uniqueemail="true" placeholder="E-mail" data-url-validation="/usuario/email-validacao/" class="form-control" required="true" type="text" value="" maxlength="64" aria-required="true"-->
-								   {{ form_widget(form.email, { 'attr' : {'class' : 'form-control', 'placeholder' : 'E-mail'} }) }}
-								    <span class="text-danger">{{ form_errors(form.email) }}</span>
-							    
-								</div>
-							</div>
-							  <div class="form-group col-xs-9">
-								  <label class="control-label col-sm-3 hidden-xs">SENHA:</label>
-								  <div class="col-sm-9  col-xs-9">
-							  <!--input id="senha" name="senha" minlength="6" placeholder="Senha" type="password" class="form-control" required="true" value="" maxlength="20" aria-required="true"-->
-							     {{ form_widget(form.senha, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Senha'} }) }}
-								  <span class="text-danger">{{ form_errors(form.senha) }}</span>
-							  
-								  </div>
-							</div>
-								
-								<div class="form-group col-xs-9">
-								 <label class="control-label col-sm-3 hidden-xs"></label>
-							     <div class="form-group col-sm-9 col-xs-12 submit-container"> 
-							       <button type="submit" id="btn-cadastro" class="btn btn-success btn-lg">{{ nome }}</button>
-                                   {% if (page !='login') %}
-							        <h4>Já possui um cadastro? Faça o <a href="/criaConta/login">Login</a></h4>
-                                   {% endif %}
-                                 </div>
-							    </div>
-
-							<div>
-</div></form>
 						</div>
-                      
-				
+					 
+						<div class="form-group  col-xs-9">
+							<div class="col-sm-9  col-xs-9">
+							   {{ form_widget(form.email, { 'attr' : {'class' : 'form-control', 'placeholder' : 'E-mail'} }) }}
+								<span class="text-danger">{{ form_errors(form.email) }}</span>
+							</div>
+						</div>
+
+						<div class="form-group col-xs-9">
+							<div class="col-sm-9  col-xs-9">
+								{{ form_widget(form.senha, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Senha'} }) }}
+								<span class="text-danger">{{ form_errors(form.senha) }}</span>
+							</div>
+						</div>
+
+					
+						<div class="form-group col-xs-9">
+							<div class="col-sm-9  col-xs-9">
+								{% if (page !='login') %}
+								  <input id="confirma" name="confirma" minlength="6" placeholder="Comfirma" type="password" class="form-control" required="true" value="" maxlength="20" aria-required="true">
+								{% endif %}
+							</div>
+						</div>
+						
+
+						<div class="form-group col-xs-9">
+							<div class="form-group col-sm-9 col-xs-12 submit-container"> 
+								<button type="submit" id="btn-cadastro" class="btn btn-success btn-lg">{{ nome }}</button>
+								{% if (page !='login') %}
+									<h4>Já possui um cadastro? Faça o <a href="/criaConta/login">Login</a></h4>
+								{% endif %}
+							</div>
+						</div>
+					
+					{{ form_end(form) }}
 				</div>
-				</div>
- {{ form_end(form) }}
+			</div>
+		</div>
+	</div>
+
 {% endblock %}
