--- a/app/Resources/views/menuini.html.twig
+++ b/app/Resources/views/menuini.html.twig
@@ -6,7 +6,7 @@
 
     <div  class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li  class="menu-item"><a title="Home" href="#" >Home</a></li>
+        <li  class="menu-item"><a title="Home" href="/" >Home</a></li>
 
         <li class="menu-item  dropdown">
           <a title="serviços" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true">Serviços 
