--- a/src/umespa/UserBundle/Resources/views/AlunoController/confirma.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/confirma.html.twig
@@ -10,7 +10,7 @@
  <p class="padding-top-30"><h2 class="text-default">Olá <b>{{nome}}</b></h2></p>
 <p >Você se cadastrou recentemente em nosso site para adquirir a Carteira de Identificação Estudantil!</br>
 Para dar prosseguimento a seu cadastro você precisa realizar a verificação do e-mail utilizado. Clique no botão abaixo para realizar a verficação.</p>
-<p>	<a class="btn btn-success btn-lg" href="http://localhost:8000/criaConta/Login">Verificar E-mail</a></p>
+<p>	<a class="btn btn-success btn-lg" href="http://localhost/SymfonyProject/userProject/web/app_dev.php/test">Verificar E-mail</a></p>
 <p>Você só poderá dar prosseguimento ao seu cadastro após a verificação do e-mail.</br>
 Caso haja dúvidas, entre em contato conosco Telefone: (48) 3375-9065</br>
 Horário de Atendimento de Segunda à Sexta  (exceto feriados) das 8h às 12h e das 13h ás 17hras.</br>
