--- a/src/umespa/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/umespa/UserBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@
 <div class="" style="height:400px; width:100%;padding: 0 0px; background-color: #EEE8AA;">
 <br><br>
 <div class="pull-right text-center">
-				<img class="pull-right" src="https://d3foq9otpyy3s4.cloudfront.net/img/documento-topo-2018.png">
+				<img class="pull-right" width="600" height="200" src="https://d3foq9otpyy3s4.cloudfront.net/img/documento-topo-2018.png">
 				<h1 class="pull-right">Carteirinha do Estudante.</h1>
 				<h2 class="pull-right">A UMESPA disponibiliza emissão online</h2>
                 <h3 class="pull-right">Solicite agora mesmo sua carteirinha estudantil</h3>
@@ -22,7 +22,7 @@
 <!--div class="sow-image-container" style="margin-top: 5.7em;">
 <img src="{{ asset('public/img/body.png') }}" class="img-responsive" >
 </div-->
-
+{{parent()}}
 
 
 
