--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -14,6 +14,8 @@
     <body >
         {% block body %}
         {{include('menuini.html.twig')}}
+
+        {{include('menu.html.twig')}}
         {% endblock %}
        
         {% block javascripts %}
