--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -1,56 +1,49 @@
-<nav class="nav  navbar-default-fluid navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-         <ul class="nav navbar-nav">
-          <!--li calss="nav-item"><a href="/{nome}">Home</a></li-->
-             <ul class="nav navbar-nav navbar-right">
-                <!--li class="dropdown">
-              <a href="#" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="true">Servicos <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-            
-              <li><a href="{{ path('umespa_user_add') }}">Solicitar Passe Livre</a></li>
-              <li><a href="#">Renovacao da Carteirinhas</a></li-->
+<style type="text/css">
+*{
+  padding:0px;
+  margin:0px;
+}
+selection{
+  margin:50px auto;
+  width:125px;
+  height:150px;
+}
+.rede{
+   width:50px;
+  height:50px;
+  float: left;
+  margin-left:20px;
+  transition: all 0.4s ease-out;
+  border-radius: 50%;
+}
+.rede#facebook{
+  background-color: #2372a3;
+}
+.icone{
+  margin:0px auto;
+  padding:10px;
+  width:50px;
+}
+.rede:hover{
+  cursor:pointer;
+  transform: translateY(-20px);
+  box-shadow: 4px 30px 16px 0px rgba(50,50,50,0.45);
+}
+</style>
 
-           
-          
- 
-          
-          </ul>
-          
-        </div>
-        <ul class="nav navbar-nav navbar-right">
- <li class="dropdown">
-              <a href="{{ path('umespa_user_add') }}" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">Servicos </a>
-              <ul class="dropdown-menu">
-                <li>
-</li>
-                   <li><a href="{{ path('emm_user_login') }}">Solicitar passe livre</a></li>
-                   <li><a href="{{ path('add_aluno') }}">Atualizar Cadastro</a></li>
-                   <li><a href="{{ path('emm_user_login') }}">Renovar Carteira</a></li>
+<div class="panel panel-default">
+  
+  <div style="
+  position:absolute;
+	bottom:0;
+	width:100%; "class="panel-footer">
+  <div class="container page-left">
+ <selection>
+                <div class="rede" id="facebook">
+                   <img class="icone" src="http://localhost/SymfonyProject/userProject/web/public/img/facebook.png">
+                </div>
+                </selecton>
+  </div>
 
-
-
-           </ul>
-        <li><a href="{{ path('emm_user_login') }}">Logout</a></li>
-            
-                <!--li class="dropdown">
-              <a href="{{ path('umespa_user_add') }}" data-toggle="dropdown" role="button" aria-haspopup="false" aria-expanded="false">Login </a>
-              <ul class="dropdown-menu">
-                <li>
-                <!--div class="list-group" -->
-               <!--div class="list-group">
-                    <form class="form-signin">
-                        <label for="inputEmail" class="sr-only">Email address</label>
-                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                        <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                        <button class="btn btn-sm btn-primary btn-block" type="submit">Logar</button>
-                        <a href="#">Nao tenho cadastro</a>
-                    </form>
-                </div> <!-- /container -->
-
-                </li>
-               </ul>
-     </div>
-    
-</nav>        
+  </div>
+</div>
