--- a/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
@@ -1,7 +1,7 @@
 {% extends 'layout.html.twig' %}
 
 {% block body %}
-{{parent()}}
+{{ parent() }}
 	<div  class="container" style="margin-top: 101px;">
 		<div class="panel panel-default">
 			{% if (page !='login') %}
@@ -15,9 +15,9 @@
 					
 					  	<div class="form-group col-xs-9">
 							<div class="col-sm-9 col-xs-9">
-								{% if (page !='login') %}
-						        	{{ form_widget(form.nome, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Nome Completo'} }) }}
-							        <span class="text-danger">{{ form_errors(form.nome) }}</span>
+								{% if (page =='Login') %}
+						        	 {{ form_widget(form.nome, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Nome Completo'}}) }}
+							        <span class="text-danger">{{ form_errors(form.nome) }}</span> 
 							   {% endif %} 
 							</div>
 						</div>
@@ -50,12 +50,12 @@
 							<div class="form-group col-sm-9 col-xs-12 submit-container"> 
 								<button type="submit" id="btn-cadastro" class="btn btn-success btn-lg">{{ nome }}</button>
 								{% if (page !='login') %}
-									<h4>Já possui um cadastro? Faça o <a href="/criaConta/login">Login</a></h4>
+									<h4>Já possui um cadastro? Faça o <a href="/SymfonyProject/userProject/web/app_dev.php/criaConta/login">Login</a></h4>
 								{% endif %}
 							</div>
 						</div>
 					
-					{{ form_end(form) }}
+					{# {{ form_end(form) }} #}
 				</div>
 			</div>
 		</div>
