--- a/app/Resources/views/menuini.html.twig
+++ b/app/Resources/views/menuini.html.twig
@@ -6,20 +6,17 @@
 
     <div  class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li  class="menu-item"><a title="Home" href="/" >Home</a></li>
+        <li  class="menu-item"><a title="Home" href="/" ><h4>Home</h4></a></li>
+         <li  class="menu-item"><a title="Home" href="/" ><h4>Contatos</h4></a></li>
+          <li  class="menu-item"><a title="Home" href="/" ><h4>Lei da Meia-entrada</h4></a></li>
+           <li  class="menu-item"><a title="Home" href="{{path('umespa_criaConta',{'cad':'login'})}}" ><h4>Acompanhar Pedido</h4></a></li>
 
-        <li class="menu-item  dropdown">
-          <a title="serviços" href="#" data-toggle="dropdown" class="dropdown-toggle" aria-haspopup="true">Serviços 
-          <span class="caret"></span>
-          </a>
-           <ul role="menu" class="dropdown-menu">
-            <li class="menu-item "><a title="Emissão da Carteirinha" href="#">Emissção da Carteirinha</a></li>
-          </ul>
-                  </li>
+
+     
 
 <li class="menu-item" >
         
-         <div style="margin-top:10px">
+         <div style="margin-top:20px">
                 <a class="btn btn-sm btn-success" href="{{path('umespa_criaConta',{'cad':'Login'})}}" role="button">Solicite agora</a>
                 </div>
 					</li>
