--- a/src/umespa/UserBundle/Resources/views/AlunoController/enviaDocumentos.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/enviaDocumentos.html.twig
@@ -4,7 +4,10 @@
 
 {% block body %}
  {{ parent() }}
-<div class="titulo">   
+
+
+
+<div class="titulo "style="margin-top: 101px;">   
         <div class="row">
             <div class="col-md-8 col-md-offset-2 page-header">
                 <h3>Envio de Documentos</h3>
@@ -12,36 +15,80 @@
         </div>
 </div>
 
-<div class="container">
- <form action="/formulario/public/aluno/documento" id="formDocumento" method="post" autocomplete="off" enctype="application/x-www-form-urlencoded">
- <div class="panel panel-success">
-        <div class="panel-heading"><img src="" alt="">&nbsp;<b>Foto 3x4</b></div>
-        <div class="panel-body">
-        
-            <div class="row">
 
-                <div class="form-group col-md-5 text-center">
-                    <img id="imgComprovante" class="documento thumbnail "  width="150px" height="200px"src="http://2.bp.blogspot.com/-LtyWNElDw3I/UOyB85J-EnI/AAAAAAAADYQ/mwQOjRwafrE/s1600/253x4.jpg"><br>
-                    <textarea id="comprovante" name="comprovante" class="hidden"></textarea>
-                    <input type="file" id="fileComprovante" accept="image/jpeg" style="display: none" onchange="getFile(this.files[0], 'imgComprovante', 'comprovante')">
-                    <label for="fileComprovante" class="btn btn-success">Enviar Arquivo</label><br><br>
+<div class="container align-center">
+        <form action="{{path('index')}}" id="formUpload" method="post" autocomplete="off" enctype="multipart/form-data">
+            <div class="panel panel-success">
+                <div class="panel-heading" style="background-color: coral; "><img src="" alt="">&nbsp;<b>Foto 3x4</b></div> 
+                    <div class="panel-body" >                        
+                         <div class="row">
+                          <div class="form-group col-md-4 text-center">
+                                <img id="imgFoto" class="documento thumbnail "  width="150px" height="200px"><br>                                
+                                <input type="file" id="fileFoto" name="fileFoto" accept="image/jpeg" style="display: none" onchange="getFile(this.files[0], 'imgFoto', 'foto')">
+                                <span class="alert alert-danger">{{ erro }}</span><br>
+                                <label for="fileFoto" class="btn btn-success">Enviar Foto</label><br><br>
+                            </div>
+                               <div class="form-group col-md-2 text-center"></div>
+                             <div class="form-group col-md-4">
+                                <ul class="list-group">
+                                <dt>Foto no tamanho 3x4</dt>                  
+                                </ul>
+                                <p><span class="glyphicon glyphicon-alert text-danger"></span> São aceitos somente arquivos no formato JPEG/JPG</p>
+                            </div>   
+                         </div>                            
+                    </div>
+                  
+            </div>    
+            {# envia doc #}
+            <div class="panel panel-success" >
+                <div class="panel-heading" style="background-color: coral;"><img src="" alt="">&nbsp;<b>Comprovação de Situação Estudantil</b></div> 
+                    <div class="panel-body" >                        
+                         <div class="row">
+                          <div class="form-group col-md-4 text-center">
+                                <img id="imgComprovante" class="documento thumbnail "  width="400px" height="200px"><br>
+                                <input type="file" id="fileComprovante" name="fileComprovante" accept="image/jpeg" style="display: none" onchange="getFile(this.files[0], 'imgComprovante', 'comprovante')">
+                                <span class="alert alert-danger">{{ erro }}</span><br>
+                                <label for="fileComprovante"  class="btn btn-success">Enviar Arquivo</label><br><br>
+                            </div>
+                               <div class="form-group col-md-2 text-center"></div>
+                             <div class="form-group col-md-4">
+                                <ul class="list-group">
+                                 <dt>Documentos Válidos:</dt>
+                                    <li>Atestado de Matrícula</li>
+                                    <li>Atestado de Frequência</li>
+                                    <li>Boleto Bancário da Instituição</li>              
+                                </ul>
+                                <p><span class="glyphicon glyphicon-alert text-danger"></span> São aceitos somente arquivos no formato JPEG/JPG</p>
+                            </div>   
+                         </div>                            
+                    </div>
+                  
+            </div>    
+
+            <div class="col-md-12 text-center">
+                    <a href="#" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-triangle-left"></span> Voltar</a>
+                    <button type="button" nome="upload" id="upload" class="btn btn-success btn-lg">Continuar <span class="glyphicon glyphicon-triangle-right"></span></button>
                 </div>
-                <div class="form-group col-md-2 text-center"></div>
+        </form>        
+</div>   
+</br></br>
+</br>
+</br>
+</br>
 
-                <div class="form-group col-md-5">
-                    <ul class="list-group">
-                    <dt>Foto no tamanho 3x4</dt>
-                    {# <li>Atestado de Matrícula</li>
-                    <li>Atestado de Frequência</li>
-                    <li>Boleto Bancário da Instituição</li> #}
-                    </ul>
-                    <p><span class="glyphicon glyphicon-alert text-danger"></span> São aceitos somente arquivos no formato JPEG/JPG</p>
-                </div>
 
-            </div>
-        </div>
-    </div>  
-     <div class="panel panel-success">
+ {# {{ parent() }} #}
+{% endblock %}
+
+{% block javascripts %}
+<script src="{{ asset('public/js/File.js') }}"></script>
+{% endblock %}
+
+
+
+
+
+     {# <div class="panel panel-success">
         <div class="panel-heading"><img src="" alt="">&nbsp;<b>Comprovação de Situação Estudantil</b></div>
         <div class="panel-body">
             <div class="row">
@@ -87,7 +134,7 @@
                     {# <li>Atestado de Matrícula</li>
                     <li>Atestado de Frequência</li>
                     <li>Boleto Bancário da Instituição</li> #}
-                    </ul>
+                    {# </ul>
                     <p><span class="glyphicon glyphicon-alert text-danger"></span> São aceitos somente arquivos no formato JPEG/JPG</p>
                 </div>
 
@@ -113,15 +160,15 @@
                     {# <li>Atestado de Matrícula</li>
                     <li>Atestado de Frequência</li>
                     <li>Boleto Bancário da Instituição</li> #}
-                    </ul>
+                    {# </ul>
                     <p><span class="glyphicon glyphicon-alert text-danger"></span> São aceitos somente arquivos no formato JPEG/JPG</p>
                 </div>
 
             </div>
         </div>
-    </div>  
+    </div>   #} 
 
-     <div class="panel panel-success">
+     {# <div class="panel panel-success">
         <div class="panel-heading"><img src="" alt="">&nbsp;<b>Comprovante de Residência</b></div>
         <div class="panel-body">
             <div class="row">
@@ -145,8 +192,4 @@
 
             </div>
         </div>
-    </div>  
-    </form>
-</div>      
- 
-    {% endblock %}
+    </div>   #} 
