finalizando Upload E organizando fluxo

--- a/src/umespa/UserBundle/Resources/views/AlunoController/verificaEmail.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/verificaEmail.html.twig
@@ -1,6 +1,6 @@
 {% extends 'layout.html.twig' %}
 
-{% block title %}umespaUserBundle:AlunoController:Index{% endblock %}
+{# {% block title %}umespaUserBundle:AlunoController:Index{% endblock %} #}
 
 {% block body %}
 {{parent()}}
