--- a/src/umespa/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/umespa/UserBundle/Resources/views/Default/index.html.twig
@@ -14,7 +14,7 @@
 
 </div>
 				<div class="pull text-center">
-                <a class="btn btn-lg btn-success" href="{{path('umespa_criaConta',{'cad':'Login'})}}" role="button">Solicite agora</a>
+                <a class="btn btn-lg btn-success" href="{{path('umespa_criaConta',{'cad':'Criar Conta'})}}" role="button">Solicite agora</a>
 				</div>
 			</div>
             </div>
