--- a/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/criaConta.html.twig
@@ -1,23 +1,29 @@
 {% extends 'layout.html.twig' %}
 
 {% block body %}
-{{ parent() }}
+{# {{ parent() }} #}
 	<div  class="container" style="margin-top: 101px;">
 		<div class="panel panel-default">
 			{% if (page !='login') %}
-			<div class="panel-heading"><h2>Ainda não possui cadastro?</h2></div>
+			<div class="panel-heading">
+			<h2>Ainda não possui cadastro?</h2>
+			 <span class="text-danger">{{ erro }}</span> 
+			</div>
 			{% else %}
 			<div class="panel-heading"><h2>Login</h2></div>
 			{% endif %}
 			<div class="box-form panel-body">
 				<div class="row">
-					{{ form_start(form, { 'attr' : { 'novalidate': 'novalidate'}})}}
+					{# {{ form_start(form)}} #}
+										{{ form_start(form, { 'attr' : { 'novalidate': 'novalidate'}})}}
 					
 					  	<div class="form-group col-xs-9">
 							<div class="col-sm-9 col-xs-9">
-								{% if (page =='Login') %}
+								{% if (page !='Login') %}
 						        	 {{ form_widget(form.nome, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Nome Completo'}}) }}
 							        <span class="text-danger">{{ form_errors(form.nome) }}</span> 
+									
+
 							   {% endif %} 
 							</div>
 						</div>
@@ -26,6 +32,9 @@
 							<div class="col-sm-9  col-xs-9">
 							   {{ form_widget(form.email, { 'attr' : {'class' : 'form-control', 'placeholder' : 'E-mail'} }) }}
 								<span class="text-danger">{{ form_errors(form.email) }}</span>
+								
+								
+								
 							</div>
 						</div>
 
@@ -40,7 +49,8 @@
 						<div class="form-group col-xs-9">
 							<div class="col-sm-9  col-xs-9">
 								{% if (page !='login') %}
-								  <input id="confirma" name="confirma" minlength="6" placeholder="Comfirma" type="password" class="form-control" required="true" value="" maxlength="20" aria-required="true">
+								  <input id="confirma" name="confirma" minlength="6" placeholder="Comfirma" type="password" class="form-control" 
+								  required="true" value="" maxlength="20" aria-required="true">
 								{% endif %}
 							</div>
 						</div>
@@ -50,7 +60,8 @@
 							<div class="form-group col-sm-9 col-xs-12 submit-container"> 
 								<button type="submit" id="btn-cadastro" class="btn btn-success btn-lg">{{ nome }}</button>
 								{% if (page !='login') %}
-									<h4>Já possui um cadastro? Faça o <a href="/SymfonyProject/userProject/web/app_dev.php/criaConta/login">Login</a></h4>
+									<h4>Já possui um cadastro? Faça o <a href="#">Login</a></h4>
+									{# {{path('umespa_criaConta',{'cad':'login'})}} #}
 								{% endif %}
 							</div>
 						</div>
