finalizando processo de confirmação do email

--- a/src/umespa/UserBundle/Resources/views/AlunoController/confirma.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/confirma.html.twig
@@ -10,9 +10,9 @@
  <p class="padding-top-30"><h2 class="text-default">Olá <b>{{nome}}</b></h2></p>
 <p >Você se cadastrou recentemente em nosso site para adquirir a Carteira de Identificação Estudantil!</br>
 Para dar prosseguimento a seu cadastro você precisa realizar a verificação do e-mail utilizado. Clique no botão abaixo para realizar a verficação.</p>
-<p>	<a class="btn btn-success btn-lg" href="http://localhost:8000/login">Verificar E-mail</a></p>
+<p>	<a class="btn btn-success btn-lg" href='{{token}}'>Verificar E-mail</a></p>
 <p>Você só poderá dar prosseguimento ao seu cadastro após a verificação do e-mail.</br>
-Caso haja dúvidas, entre em contato conosco Telefone: (48) 3375-9065</br>
+Caso haja dúvidas, entre em contato conosco Telefone: (94) 3356-0000</br>
 Horário de Atendimento de Segunda à Sexta  (exceto feriados) das 8h às 12h e das 13h ás 17hras.</br>
 Desconsidere esta mensagem caso não tenha realizado nenhuma solicitação. </p>
 <p>Atenciosamente, <br>UMESPA - União Municipal dos Estudantes de Parauapebas</td> </p> 
