--- a/src/umespa/UserBundle/Resources/views/AlunoController/leidameiaentrada.html.twig
+++ b/src/umespa/UserBundle/Resources/views/AlunoController/leidameiaentrada.html.twig
@@ -2,10 +2,10 @@
 
 {% block body %}
 {{parent()}}
-<div class="conteudo">
+<div class="conteudo" style="margin-top: 101px;">
             
     <div class="row">
-        <div class="col-md-8 col-md-offset-2  page-header">
+        <div class="col-md-8 col-md-offset-2 ">
             <h2 class="text-center padding-bottom-20">Lei da Meia Entrada?</h2>
             <p class="padding-bottom-20">A partir de agora, com a <a href="http://www.planalto.gov.br/ccivil_03/_ato2011-2014/2013/lei/l12933.htm" target="_blank">lei  Nº 12.933 26/12/13</a> , a meia entrada e os direitos dos estudantes ganham um novo aliado: o documento padronizado do estudante!</p>
     
