--- a/app/Resources/views/menuini.html.twig
+++ b/app/Resources/views/menuini.html.twig
@@ -8,7 +8,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li  class="menu-item"><a title="Home" href="/" ><h4>Home</h4></a></li>
          <li  class="menu-item"><a title="Home" href="/" ><h4>Contatos</h4></a></li>
-          <li  class="menu-item"><a title="Home" href="/" ><h4>Lei da Meia-entrada</h4></a></li>
+          <li  class="menu-item"><a title="Home" href="{{path('umespa_links')}}" ><h4>Lei da Meia-entrada</h4></a></li>
            <li  class="menu-item"><a title="Home" href="{{path('umespa_criaConta',{'cad':'login'})}}" ><h4>Acompanhar Pedido</h4></a></li>
 
 
@@ -17,7 +17,7 @@
 <li class="menu-item" >
         
          <div style="margin-top:20px">
-                <a class="btn btn-sm btn-success" href="{{path('umespa_criaConta',{'cad':'Login'})}}" role="button">Solicite agora</a>
+                <a class="btn btn-sm btn-success" href="{{path('umespa_criaConta',{'cad':'Criar Conta'})}}" role="button">Solicite agora</a>
                 </div>
 					</li>
          
