--- a/app/Resources/views/menuini.html.twig
+++ b/app/Resources/views/menuini.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top navbar-color-on-scroll hestia_left navbar-transparent">
   <div class="container">
     <div class="navbar-header">  
-        <a class="" href="/" title="UMESPA"><img  src="/public/img/logo.png" height="90px"></img></a>
+        <a class="" href="/" title="UMESPA"><img  src="{{ asset('public/img/logo.png') }}" height="90px"></img></a>
     </div>
 
     <div  class="collapse navbar-collapse">
